# agent-eval

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  _ax_validate.ts  _gen4_validate.ts  biome.json  package.json  pnpm-lock.yaml  tangle-network-agent-eval-0.11.0.tgz  tangle-network-agent-eval-0.12.0.tgz  tangle-network-agent-eval-0.6.0.tgz  tangle-network-agent-eval-0.7.0.tgz  tsconfig.build.json  tsconfig.examples.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.evolve/: current.json  experiments.jsonl  governor.jsonl  progress.md  scorecard.json  skill-runs.jsonl
.evolve/empirical-artifact/: README.md  report.json
.evolve/pursuits/: 2026-05-28-token-capture-cost-axis.md  2026-06-01-analyst-model-agnostic.md  2026-06-01-empirical-proof.md  2026-06-04-belief-state-agent-eval.md
.evolve/reflections/: 2026-05-24-self-improvement-substrate.md  2026-05-27-decision-packet-substrate.md  2026-05-28-064948.md
.evolve/reviews/: 2026-05-25-SYNTHESIS.md  2026-05-25-alignment-steering.md  2026-05-25-anthropic-self-improvement.md  2026-05-25-senior-eval-engineer.md  2026-05-25-sota-competitive.md  2026-05-27-dogfood-real-consumer-data.md
.github/workflows/: ci.yml  empirical-gate.yml  official-optimizer-benchmark.yml  publish.yml
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/examples/: judge_anti_slop.py
clients/python/scripts/: verify_publishable_dist.py
clients/python/src/agent_eval_rpc/: __init__.py  client.py  dspy_metric.py  gepa_api.py  gepa_bridge.py  gepa_bridge_contract.py  gepa_compat_0_1_4.py  gepa_model_proxy.py  hosted.py  optimizer_bridge_common.py  skillopt_bridge.py  skillopt_compat_v020.py
clients/python/src/tangle_agent_eval/: __init__.py  client.py  errors.py  models.py
clients/python/tests/: test_client.py  test_dspy_metric.py  test_gepa_bridge.py  test_gepa_release_compatibility.py  test_hosted.py  test_models.py  test_official_optimizer_compatibility.py  test_optimizer_bridge_common.py  test_skillopt_bridge.py  test_subprocess.py
docs/: adapters-observability.md  auto-research-loop-end-to-end.md  building-doctrine.md  campaign-proposers.md  concepts.md  control-runtime.md  customer-journeys.md  design.md  distributed-driver.md  eval-fixtures.md  eval-surface-map.md  feature-guide.md  feedback-trajectories.md  hosted-ingest-spec.md  improvement-glossary.md  insight-report.md  integration-launch-gates.md  knowledge-readiness.md  multi-shot-optimization.md  phase-b-pairing-kit.md  phase-b-runbook.md  product-eval-adoption.md  quickstart-external.md  research-report-methodology.md  rollout.md  self-improvement-map.md  three-package-architecture.md  trace-analysis.md  wire-protocol.md
docs/design/: external-agent-wedge.md  loop-taxonomy.md  pass-a-checklist.md  pass-a-substrate-0.40.md  phase-d-rfc.md  phase4-consumer-migration.md  primitives-integration-spec.md  product-self-improvement-loop.md  runcampaign-1.0.md  self-improvement-engine.md  self-improvement-protocol.md  self-improvement-roadmap.md  substrate-gaps-2026-05-27.md
docs/pilot/: README.md  customer-checklist.md  integration-foreign-stack.md  integration-tangle-stack.md  one-pager.md  sample-insight-report.json
docs/research/: belief-state-agent-eval-roadmap.md  research-roadmap.md
docs/specs/: driver-honest-spec.md  hermes-self-improvement-audit.md  profile-versioning.md
examples/: README.md  fuzz-legal-demo.mjs
examples/_shared/: env.ts  (+3 more)
scripts/: build-declarations.mjs  build-entries.mjs  check-skill.mjs  emit-declaration-aliases.mjs  verify-package-exports.mjs
src/: abort-signal.test.ts  abort-signal.ts  action-policy.test.ts  action-policy.ts  active-learning.ts  agent-profile-cell.ts  agent-profile.test.ts  agent-profile.ts  agentic-journey.ts  anti-slop.ts  artifact-validator.ts  attestation.test.ts  attestation.ts  auto-pr.ts  baseline.ts  behavior-dsl.ts  benchmark.ts  bisector.ts  budget-guard.ts  canary.ts  capability-headroom.test.ts  capability-headroom.ts  causal-attribution.ts  ci-gate.ts  cli-config.test.ts  cli-config.ts  cli.ts  client.test.ts  client.ts  clustered-paired-binary.ts  code-mutator.ts  command-runner.test.ts  command-runner.ts  completion-verifier.test.ts  completion-verifier.ts  composite-mutator.ts  concurrency.test.ts  concurrency.ts  contamination-guard.ts  control-runtime.test.ts  (+173 more)
tests/: adapters-otel.test.ts  adapters-traceai.test.ts  agent-profile-cell.test.ts  analyst-tracing.test.ts  anti-slop.test.ts  artifact-validator.test.ts  audit-primitives-t02-t04.test.ts  audit-primitives.test.ts  auto-pr.test.ts  backend-integrity.test.ts  behavior-dsl.test.ts  benchmarks.test.ts  bisector.test.ts  boundary-integrity.test.ts  budget-guard.test.ts  builder-eval.test.ts  canary.test.ts  ci-gate.test.ts  clustered-paired-binary.test.ts  code-mutator.test.ts  coherence-judge.test.ts  consumer-contract.test.ts  contamination-guard.test.ts  contract-analyze-runs.test.ts  contract-code-agent-intake.test.ts  contract-define-agent-eval.test.ts  contract-diff.test.ts  contract-eval-reporting-suite.test.ts  contract-self-improve.test.ts  convergence.test.ts  cost-tracker.test.ts  dataset.test.ts  description-length-gate.test.ts  diagnose.test.ts  discover-personas.test.ts  dual-agent-bench.test.ts  empirical-proof.test.ts  eval-campaign.test.ts  eval-tools.test.ts  experiment-tracker-d1.test.ts  (+109 more)
(+2173 files in other folders)
