[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tangle-agent-eval"
version = "0.21.0"
description = "Python client for @tangle-network/agent-eval — judge content against rubrics over HTTP or stdio RPC."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tangle Network" }]
keywords = ["evaluation", "llm", "rubric", "agent", "judge"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/tangle-network/agent-eval"
Issues = "https://github.com/tangle-network/agent-eval/issues"
Documentation = "https://github.com/tangle-network/agent-eval/blob/main/clients/python/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tangle_agent_eval"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
