[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "agent-eval-rpc"
version = "0.126.5"
description = "Python RPC client, official optimizer bridge, and DSPy metric adapter for @tangle-network/agent-eval."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tangle Network" }]
keywords = ["evaluation", "llm", "rubric", "agent", "judge"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "filelock>=3.16",
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]
dspy = [
  "dspy==3.2.1",
]

[dependency-groups]
skillopt-source = [
  "skillopt @ git+https://github.com/microsoft/SkillOpt.git@61735e3922efc2b90c6d6cab561e62e98452ca90",
]
gepa-source = [
  "gepa[full] @ git+https://github.com/gepa-ai/gepa.git@f919db0a622e2e9f9204779b81fe00cc1b2d808f",
]
gepa-release = [
  "gepa[full]==0.1.4",
]

[project.urls]
Homepage = "https://github.com/tangle-network/agent-eval"
Issues = "https://github.com/tangle-network/agent-eval/issues"
Documentation = "https://github.com/tangle-network/agent-eval/blob/main/clients/python/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval_rpc"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
conflicts = [
  [
    { extra = "dspy" },
    { group = "gepa-source" },
  ],
  [
    { extra = "dspy" },
    { group = "gepa-release" },
  ],
  [
    { group = "gepa-source" },
    { group = "gepa-release" },
  ],
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
